fix(core/tabs): layout stretched (#345)

--- a/packages/core/src/components/tabs/tabs.scss
+++ b/packages/core/src/components/tabs/tabs.scss
@@ -19,6 +19,7 @@ ix-tabs {
   .tab-items {
     overflow: hidden;
     scroll-behavior: smooth;
+    width: 100%;
 
     .items-content {
       display: flex;
